[gd_scene load_steps=36 format=2]

[ext_resource path="res://Scenes/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Player/Camera.gd" type="Script" id=2]
[ext_resource path="res://Assets/Textures/Player/body8x9.png" type="Texture" id=3]
[ext_resource path="res://Assets/Textures/Player/head10x6.png" type="Texture" id=4]
[ext_resource path="res://Assets/Textures/Player/eyes10x6.png" type="Texture" id=5]
[ext_resource path="res://Assets/Textures/Player/hand4x4.png" type="Texture" id=6]
[ext_resource path="res://Assets/Textures/Player/foot4x4.png" type="Texture" id=7]
[ext_resource path="res://Scenes/Player/Pot.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/Fonts/Munro/munro.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://Scenes/Player/Feet.gd" type="Script" id=10]
[ext_resource path="res://Assets/Fonts/Munro/munro-small.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://Assets/Audio/step.wav" type="AudioStream" id=12]
[ext_resource path="res://Assets/Audio/jump.wav" type="AudioStream" id=13]

[sub_resource type="PhysicsMaterial" id=1]

[sub_resource type="QuadMesh" id=2]
size = Vector2( 0.5, 0.3 )

[sub_resource type="SpatialMaterial" id=3]
resource_local_to_scene = true
params_cull_mode = 2
params_billboard_mode = 2

[sub_resource type="QuadMesh" id=4]
size = Vector2( 0.4, 0.45 )

[sub_resource type="SpatialMaterial" id=5]
params_cull_mode = 2
params_billboard_mode = 2
params_use_alpha_scissor = true
params_alpha_scissor_threshold = 0.98
albedo_texture = ExtResource( 3 )

[sub_resource type="QuadMesh" id=6]
size = Vector2( 0.2, 0.2 )

[sub_resource type="SpatialMaterial" id=7]
params_cull_mode = 2
params_billboard_mode = 2
params_use_alpha_scissor = true
params_alpha_scissor_threshold = 0.98
albedo_texture = ExtResource( 6 )

[sub_resource type="SpatialMaterial" id=8]
params_cull_mode = 2
params_billboard_mode = 2
params_use_alpha_scissor = true
params_alpha_scissor_threshold = 0.98
albedo_texture = ExtResource( 7 )

[sub_resource type="Animation" id=9]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Rotation/Player/Feet/FootLeft/LeftFootMesh:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0.1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Rotation/Player/Feet/FootRight/RightFootMesh:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0.1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Rotation/Player/Arms/ArmLeft:translation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( -0.25, 0, -2.98023e-08 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Rotation/Player/Arms/ArmRight:translation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0.25, 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Rotation/Player/Head:translation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0.4, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Rotation/Player/Body:translation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0, 0 ), Vector3( 0, -0.00650257, 0 ), Vector3( 0, -0.00650257, 0 ) ]
}

[sub_resource type="Animation" id=10]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Rotation/Player/Feet/FootLeft/LeftFootMesh:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.5, 1.5 ),
"update": 0,
"values": [ Vector3( 0, 0.1, 0 ), Vector3( 0, 0.2, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Rotation/Player/Feet/FootRight/RightFootMesh:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1.5, 0.5 ),
"update": 0,
"values": [ Vector3( 0, 0.2, 0 ), Vector3( 0, 0.1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Rotation/Player/Head:translation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector3( 0, 0.4, 0 ), Vector3( 0, 0.45, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Rotation/Player/Body:translation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0.0296061, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Rotation/Player/Pot:translation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, -0.5 ), Vector3( 0, -0.02, -0.5 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Rotation/Player/Arms/ArmLeft:translation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( -0.25, 0, -0.05 ), Vector3( -0.25, 0, -5.96046e-08 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Rotation/Player/Arms/ArmRight:translation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0.25, 0, 0 ), Vector3( 0.25, 0, -0.05 ) ]
}
tracks/7/type = "audio"
tracks/7/path = NodePath("Rotation/Player/Feet/FootLeft/AudioStreamPlayer3D")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 12 )
} ],
"times": PoolRealArray( 0 )
}
tracks/8/type = "audio"
tracks/8/path = NodePath("Rotation/Player/Feet/FootRight/AudioStreamPlayer3D2")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 12 )
} ],
"times": PoolRealArray( 0.2 )
}

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "Stand"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "Walk"

[sub_resource type="AnimationNodeStateMachineTransition" id=13]
xfade_time = 0.1

[sub_resource type="AnimationNodeStateMachineTransition" id=14]
xfade_time = 0.1

[sub_resource type="AnimationNodeStateMachine" id=15]
states/Stand/node = SubResource( 11 )
states/Stand/position = Vector2( 360, 216 )
states/Walk/node = SubResource( 12 )
states/Walk/position = Vector2( 575, 216 )
transitions = [ "Stand", "Walk", SubResource( 13 ), "Walk", "Stand", SubResource( 14 ) ]

[sub_resource type="AnimationNodeTimeScale" id=16]

[sub_resource type="AnimationNodeBlendTree" id=17]
graph_offset = Vector2( 45, -37 )
nodes/StateMachine/node = SubResource( 15 )
nodes/StateMachine/position = Vector2( 400, 160 )
nodes/TimeScale/node = SubResource( 16 )
nodes/TimeScale/position = Vector2( 620, 160 )
nodes/output/position = Vector2( 800, 180 )
node_connections = [ "output", 0, "TimeScale", "TimeScale", 0, "StateMachine" ]

[sub_resource type="AnimationNodeStateMachinePlayback" id=18]

[sub_resource type="CapsuleShape" id=19]
radius = 0.25
height = 0.6

[sub_resource type="Animation" id=20]
resource_name = "cargodown"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5, 4, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.772549, 0.188235, 0.188235, 0 ), Color( 0.772549, 0.188235, 0.188235, 1 ), Color( 0.772549, 0.188235, 0.188235, 1 ), Color( 0.772549, 0.188235, 0.188235, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "game_over" ],
"method": "emit_signal"
} ]
}

[sub_resource type="DynamicFont" id=21]
size = 120
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=22]
size = 32
font_data = ExtResource( 11 )

[node name="Player" type="RigidBody"]
collision_layer = 0
collision_mask = 2
mode = 1
physics_material_override = SubResource( 1 )
contacts_reported = 1
contact_monitor = true
can_sleep = false
axis_lock_angular_y = true
script = ExtResource( 1 )

[node name="Visual" type="Spatial" parent="."]

[node name="Rotation" type="Spatial" parent="Visual"]
transform = Transform( 1, 0, 2.38419e-07, 0, 1, 0, -2.38419e-07, 0, 1, 0, 0, 0 )

[node name="Player" type="Spatial" parent="Visual/Rotation"]
transform = Transform( -1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, 0, 0.5, 0 )

[node name="Head" type="MeshInstance" parent="Visual/Rotation/Player"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, 0 )
cast_shadow = 0
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="HeadTex" type="Viewport" parent="Visual/Rotation/Player"]
size = Vector2( 10, 6 )
handle_input_locally = false
hdr = false
usage = 1
render_target_update_mode = 3

[node name="Head" type="Sprite" parent="Visual/Rotation/Player/HeadTex"]
position = Vector2( 5, 3 )
texture = ExtResource( 4 )

[node name="Eyes" type="Sprite" parent="Visual/Rotation/Player/HeadTex"]
position = Vector2( 5, 3 )
texture = ExtResource( 5 )

[node name="Body" type="MeshInstance" parent="Visual/Rotation/Player"]
cast_shadow = 0
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="Arms" type="Spatial" parent="Visual/Rotation/Player"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.35 )

[node name="ArmLeft" type="MeshInstance" parent="Visual/Rotation/Player/Arms"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.25, 0, -0.05 )
cast_shadow = 0
mesh = SubResource( 6 )
material/0 = SubResource( 7 )

[node name="ArmRight" type="MeshInstance" parent="Visual/Rotation/Player/Arms"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.25, 0, 0 )
cast_shadow = 0
mesh = SubResource( 6 )
material/0 = SubResource( 7 )

[node name="Feet" type="Spatial" parent="Visual/Rotation/Player"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.4, 0 )
script = ExtResource( 10 )

[node name="FootLeftRay" type="RayCast" parent="Visual/Rotation/Player/Feet"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.15, 0.15, 0 )
enabled = true
cast_to = Vector3( 0, -0.5, 0 )
collision_mask = 2

[node name="FootLeft" type="Spatial" parent="Visual/Rotation/Player/Feet"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.15, -0.1, 0 )

[node name="LeftFootMesh" type="MeshInstance" parent="Visual/Rotation/Player/Feet/FootLeft"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0 )
cast_shadow = 0
mesh = SubResource( 6 )
material/0 = SubResource( 8 )

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="Visual/Rotation/Player/Feet/FootLeft"]
stream = ExtResource( 12 )
unit_db = -3.0
unit_size = 3.0
max_db = -6.0

[node name="FootRightRay" type="RayCast" parent="Visual/Rotation/Player/Feet"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.15, 0.15, 0 )
enabled = true
cast_to = Vector3( 0, -0.5, 0 )
collision_mask = 2

[node name="FootRight" type="Spatial" parent="Visual/Rotation/Player/Feet"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.15, -0.1, 0 )

[node name="AudioStreamPlayer3D2" type="AudioStreamPlayer3D" parent="Visual/Rotation/Player/Feet/FootRight"]
stream = ExtResource( 12 )
unit_db = -3.0
unit_size = 3.0
max_db = -6.0

[node name="RightFootMesh" type="MeshInstance" parent="Visual/Rotation/Player/Feet/FootRight"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0 )
cast_shadow = 0
mesh = SubResource( 6 )
material/0 = SubResource( 8 )

[node name="Pot" parent="Visual/Rotation/Player" instance=ExtResource( 8 )]

[node name="Camera" type="Position3D" parent="Visual"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
script = ExtResource( 2 )

[node name="OmniLight" type="OmniLight" parent="Visual/Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0.1 )
light_energy = 0.5
light_indirect_energy = 0.0

[node name="CameraWant" type="Position3D" parent="Visual/Camera"]
transform = Transform( 1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0, 1.7, 3.5 )
__meta__ = {
"_editor_description_": ""
}

[node name="Listener" type="Listener" parent="Visual/Camera"]
current = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Visual"]
anims/Stand = SubResource( 9 )
anims/Walk = SubResource( 10 )

[node name="AnimationTree2" type="AnimationTree" parent="Visual"]
tree_root = SubResource( 17 )
anim_player = NodePath("../AnimationPlayer")
parameters/StateMachine/playback = SubResource( 18 )
parameters/TimeScale/scale = 1.0

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.5, 0 )
shape = SubResource( 19 )

[node name="GroundRay" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
enabled = true
cast_to = Vector3( 0, -0.65, 0 )
collision_mask = 2

[node name="Camera" type="InterpolatedCamera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0, 1.7, 3.5 )
far = 250.0
target = NodePath("../Visual/Camera/CameraWant")
speed = 40.0
enabled = true
__meta__ = {
"_editor_description_": ""
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/cargodown = SubResource( 20 )

[node name="Label" type="Label" parent="."]
modulate = Color( 0.772549, 0.188235, 0.188235, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 21 )
text = "CARGO
DESTROYED"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="Control"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -273.0
margin_right = 463.0
custom_fonts/font = SubResource( 21 )
text = "SCORE"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score2" type="Label" parent="Control"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -273.0
margin_right = 463.0
custom_fonts/font = SubResource( 21 )
text = "0"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control"]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -387.0
margin_top = -44.0
custom_fonts/font = SubResource( 22 )
text = "PRESS JUMP TO RETURN TO MENU"
align = 1
valign = 1

[node name="Tween" type="Tween" parent="."]

[node name="Jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -22.0
[connection signal="cargo_down" from="Visual/Rotation/Player/Pot" to="." method="cargo_down"]
[connection signal="flower_spawned" from="Visual/Rotation/Player/Pot" to="." method="flower_spawned"]
